# simple-auth

./: .env  Cargo.toml  Rocket.toml
migrations/2018-12-09-131343_create_users_table/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/auth/: api.rs  credential.rs  mod.rs  token.rs
src/db/: postgres.rs
src/models/: accounts.rs
