[package]
name = "simple-auth"
version = "0.1.0"
authors = ["iosmanthus <myosmanthustree@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.2"
error-chain = "0.12.0"
base64 = "0.10.0"
diesel = { version = "1.3.3", features = ["postgres", "uuid", "chrono"] }
redis = "0.9.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
argon2rs = "0.2.5"
rand = "0.6.1"
hex = "0.3.2"
chrono = "0.4.6"
serde = "1.0.80"
serde_derive = "1.0.80"
jsonwebtoken = "5.0.1"

[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["json", "diesel_postgres_pool", "redis_pool"]
